<?xml version="1.0"?>
<?xml-model href=""?>
<package format="3">
  <name>go2_interfaces</name>
  <version>1.0.0</version>
  <description>Go2 Interfaces</description>
  <maintainer email="juancarlos.serrano@urjc.es">Juan Carlos Manzanares</maintainer>
  <license>BSD 3-Clause License</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
